--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 title: Darshana Shah
-logo: /assets
+#logo: /assets/img/gitphoto.jpeg
+#description: text below image
+show_downloads: true
+theme: jekyll-theme-minimal
